[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Hearts.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Heart.png" type="Texture" id=2]
[ext_resource path="res://Helpers/Sprite_Handler.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Hit"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("Sprite_Handler")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "flash_on"
}, {
"args": [  ],
"method": "flash_off"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 3.24901, 0.466516 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}

[node name="Hearts" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite_Handler" parent="." instance=ExtResource( 3 )]

[node name="X_Center" type="Position2D" parent="."]
position = Vector2( 0, -6 )

[node name="Heart_Icon" type="Sprite" parent="X_Center"]
unique_name_in_owner = true
position = Vector2( 0.5, 0 )
texture = ExtResource( 2 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 1 )

[node name="Wait" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
autostart = true

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
